test/fail/syntax_error/expected_expression.amla
func foo () {
     x : i32 = ;
}